--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
-h1 {
-  color: white;
-  background-color: black;
+.thumbnails {
+  object-fit: cover;
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
 }
