--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,14 @@
+body{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+}
+
 .app{
   display: flex;
+}
+
+.product-info {
+  padding-top: 20px
 }
 
 .original-price {
