--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,18 @@ body{
   display: flex;
 }
 
+.product-name p, h2{
+  margin: 0;
+}
+
+.product-name h2{
+  margin-bottom: 10px;
+}
+
+.prices{
+  height: 45px;
+}
+
 .original-price {
   text-decoration: line-through;
 }
@@ -18,53 +30,66 @@ body{
   color: red;
 }
 
+.selected-style {
+  border: 2px solid purple;
+}
+
+.style-container {
+  display: flex;
+  width: 300px;
+  flex-wrap: wrap;
+  flex-shrink: 0;
+}
+
 .style-thumbnails {
   object-fit: cover;
   border-radius: 50%;
-  width: 75px;
+  width: 25%;
+  padding: 5px;
   height: 75px;
   cursor: pointer;
 }
 
-.selected-style {
-  width: 100px;
-  height: 100px;
+.cart-form select {
+  padding: 12px;
+  width: 100%;
+  height: 40px;
+  border: none;
+  font-size: 12px;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+  -webkit-appearance: button;
+  appearance: button;
+  outline: none;
+  margin-bottom: 10px;
 }
 
-.cart-form select {
-  background-color: #0563af;
-  color: white;
+.cart-form select option {
+  padding: 30px;
+}
+
+.add-to-cart-button {
   padding: 12px;
-  width: 250px;
+  width: 100%;
   border: none;
   font-size: 20px;
   box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
   -webkit-appearance: button;
   appearance: button;
   outline: none;
+  margin-bottom: 10px;
+  cursor: pointer;
+
 }
 
-.cart-form::before {
-  content: "\f13a";
-  font-family: FontAwesome;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 20%;
-  height: 100%;
-  text-align: center;
-  font-size: 28px;
-  line-height: 45px;
-  color: rgba(255, 255, 255, 0.5);
-  background-color: rgba(255, 255, 255, 0.1);
-  pointer-events: none;
+@media only screen and (max-width: 900px) {
+  .cart-form {
+    width: 300px;
+  }
 }
 
-.cart-form:hover::before {
-  color: rgba(255, 255, 255, 0.6);
-  background-color: rgba(255, 255, 255, 0.2);
+@media only screen and (min-width: 900px) and (max-width: 1215px){
+  .cart-form {
+    width: 225px;
+  }
 }
 
-.cart-form select option {
-  padding: 30px;
-}
