--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,38 @@ body{
   display: flex;
 }
 
+.see-reviews {
+  position: relative;
+  top: -5px;
+  left: 3px;
+}
+
+.see-reviews::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  transform: scaleX(0);
+  transition: transform 0.3s ease
+}
+
+.see-reviews:link {
+  text-decoration: none;
+  color: purple;
+}
+
+.see-reviews:hover::before {
+  transform: scaleX(1);
+}
+
+.see-reviews:visited {
+  color: purple;
+}
+
 .product-name p, h2{
   margin: 0;
 }
