--- a/src/styles.css
+++ b/src/styles.css
@@ -10,59 +10,12 @@ body{
   display: flex;
 }
 
-.see-reviews {
-  position: relative;
-  top: -5px;
-  left: 3px;
-}
-
-.see-reviews::before {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 1px;
-  bottom: 0;
-  left: 0;
-  background-color: #000;
-  transform: scaleX(0);
-  transition: transform 0.3s ease
-}
-
-.see-reviews:link {
-  text-decoration: none;
-  color: purple;
-}
-
-.see-reviews:hover::before {
-  transform: scaleX(1);
-}
-
-.see-reviews:visited {
-  color: purple;
-}
-
 .product-name p, h2{
   margin: 0;
 }
 
-.product-slogan-and-description {
-  width: 80%;
-}
-
-.slogan {
-  font-size: 12px;
-  font-style: italic;
-  margin-bottom: 10px !important;
-}
-
-.description {
-  margin-bottom: 10px !important;
-  font-size: 12px;
-}
-
-.features {
-  font-size: 12px;
+.product-name h2{
+  margin-bottom: 10px;
 }
 
 .prices{
@@ -79,10 +32,6 @@ body{
 
 .selected-style {
   border: 2px solid purple;
-}
-
-.style-component {
-  margin-bottom: 10px;
 }
 
 .style-container {
