--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,13 @@ body{
   font-weight: 300;
   margin-top: 15px;
 }
+small {
+  font-size: 0.7em;
+}
+
+a {
+  cursor: pointer
+}
 
 .app{
   display: flex;
